fix: setting fixed font-size for progress bar to avoid clipped label text

--- a/client/src/components/base/progress/progress-bar.scss
+++ b/client/src/components/base/progress/progress-bar.scss
@@ -15,6 +15,7 @@
 	}
 
 	.progress-label {
+		font-size: 1.5rem;
 		position: absolute;
 		top: 0;
 		left: 0;
